--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edh",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,8 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Catalin Tanasescu",
   "license": "ISC",
