--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edh",
-  "version": "3.0.11",
+  "version": "3.0.10",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "publish": "npm version patch && npm run build"
+    "publish:npm": "npm version patch && npm run build && npm publish"
   },
   "author": "Catalin Tanasescu",
   "license": "ISC",
